Use correct classes in tests